Fix add funds button alignment
Fix #3267

Auditors: @alexwykoff

--- a/less/about/preferences.less
+++ b/less/about/preferences.less
@@ -579,7 +579,7 @@ table.sortableTable {
     }
     &:last-of-type {
       button {
-        margin-top: 4.3em;
+        margin-top: 57px;
       }
     }
   }
